Update some sample java files